testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpressionShadowing.errors.txt
index.js(12,16): error TS2339: Property 'Another' does not exist on type 'typeof Q'.


==== index.js (1 errors) ====
    class A {
        member = new Q();
    }
    class Q {
        x = 42;
    }
    module.exports = class Q {
        constructor() {
            this.x = new A();
        }
    }
    module.exports.Another = Q;
                   ~~~~~~~
!!! error TS2339: Property 'Another' does not exist on type 'typeof Q'.
    